# gdpr-fines-analysis

./: .gitignore  Untitled.ipynb  Untitled1.ipynb  _quarto.yml  data_exploration.ipynb  dev.ipynb  gdpr_fines_analysis.html  gdpr_fines_analysis.md  gdpr_fines_analysis.qmd  index.html  index.qmd  pyproject.toml  rolandwright.py  royKent.ipynb  scraper.py  styles.css  untitled
_book/: dev.html  index.html  search.json
_book/notebooks/: data_exploration.html
_book/site_libs/bootstrap/: bootstrap.min.css
data/: scraped_art_text.json  scraped_fines.csv  scraped_fines.json
notebooks/: data_exploration.html  data_exploration.ipynb  data_exploration.qmd  regression.ipynb  regression.qmd  styles.css
params/: plt_params.py
scripts/: scrape_gdpr_fines.py  wrangling_funs.py
tests/: test_wrangling.py
