[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pytest = "^8.1.1"
statsmodels = "^0.14.1"
jupyter = "^1.0.0"
nbformat = "^5.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
